# Python-Programming

./: .gitignore  README.md
01. Data types/: DataTypes.py
05. Numbers/: Numbers.py
08. Default arguments & scopes/: DefaultArgs.py  MutableDefault.py  ObjectAndTypes.py
09. Data structure/: Tuples.py
1. Data types/: HelloWorld.py
10. Satndard rules/: EAFP.py  LBYL.py  PlatformSpecific.py
12. Iteration and generators/: GeneratorExpressions.py  Generators.py  Iteratrion_protocols.py
13. File handling/: Bmp.py  Fridge.py  Notes.txt  RecmanSequence.py  Sequence.py
14. Functions/: ArgsKwarrgs.py  ListMethods.py
18. OOPS concepts/: Circle.py  Class1.py  Inheritance.py  MehtodsInClass.py  Renegade.py
19. Packages/: OOP_Homework.py  test2.py
20. Exception handling/: ErrorsExamples.py  Exceptions.py
21. Unit testing/: cap.py
22. Decorators/: Decorator_5.py  Decorators_1.py  Decorators_2.py  Decorators_3.py  Decorators_4.py  Notes.txt
23. Generators/: Iter_function.py  Next.py
24. Advanced modules/: DateTime.py  Regex.py
25. Advanced objects and DS/: Advanced OOP.py  Advanced dictionaries.py  Advanced lists.py
4. Inputs/: Print.py  words.py
8. Default arguments & scopes/: Parser.py
9. Data structure/: Arrays2.py  Ranges.py  Strings.py
Day-1/: DataTypes.py  HelloWorld.py  LinesAndIndents.py
Projects/chat-app/backend/: pyproject.toml
Projects/chat-app/backend/day1/: 01_sequential_vs_concurrent.py  02_fake_api_fetch.py  03_tasks_and_cancellation.py  04_timeouts.py
Projects/chat-app/backend/day1/notes/: 01_sequential_vs_concurrent.md
(+382 files in other folders)
